@@ -728,6 +728,7 @@
     <File subtype="Code" buildaction="Compile" name="System.Net.Browser/InternalWebResponseStreamWrapper.cs" />
     <File subtype="Code" buildaction="Compile" name="System.Net.Browser/PolicyBasedHttpWebRequest.cs" />
     <File subtype="Code" buildaction="Compile" name="Mono/EventObjectToggleRef.cs" />
+    <File subtype="Code" buildaction="Compile" name="System.Windows.Data/EditableCollectionView.cs" />
   </Contents>
   <References>
     <ProjectReference type="Gac" localcopy="True" refto="System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
